--- a/arch/arm64/boot/dts/google/gs101-trusty.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-trusty.dtsi
@@ -8,7 +8,7 @@
 #include <dt-bindings/interrupt-controller/arm-gic.h>
 
 / {
-	trusty {
+	trusty: trusty {
 		compatible = "android,trusty-smc-v1";
 
 		irq {
