gxp: Add cooling node for GXP
Add cooling node for GXP deivce to work with system
thermal management.

Bug: 177217526
Change-Id: I2dbe7563d40411d38fe620a04d61830d34b371b4
Signed-off-by: Wei Miao <miaowei@google.com>

--- a/arch/arm64/boot/dts/google/gs201-gxp.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-gxp.dtsi
@@ -43,4 +43,7 @@
 		gxp-debug-dump-region = <&gxp_debug_dump_reserved>;
 		gxp-scratchpad-region = <&gxp_scratchpad_reserved>;
 	};
+	gxp_cooling: gxp-cooling {
+		#cooling-cells = <2>;
+	};
 };
