google_battery: add batt_vs thermal zone
add for thermal estimation

Bug: 214310583
Signed-off-by: Wasb Liu <wasbliu@google.com>
Change-Id: I7eb45a99f2b7a1f495bc737957826e47f0560d96

--- a/arch/arm64/boot/dts/google/gs201-cloudripper-battery.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cloudripper-battery.dtsi
@@ -54,6 +54,8 @@
 				google,bd-trickle-recharge-soc = <80>;
 				/* Enable TRICKLE-DEFEND */
 				google,bd-trickle-enable;
+				/* Battery virtual sensor */
+				google,batt-vs-tz-name = "batt_vs";
 
 				/* record over temperature time */
 				google,temp-record-thr = <300 350 400>;
