--- a/arch/arm64/boot/dts/google/gs201-cheetah-charging.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cheetah-charging.dtsi
@@ -10,3 +10,8 @@
 &pca9468_dc {
 	pca9468,input-current-limit = <2500000>; /* 5A max */
 };
+
+&google_charger {
+	google,thermal-mitigation = <5000000 4000000 2500000 1000000>;
+	google,wlc-fcc-thermal-mitigation = <5000000 5000000 4000000 2500000 1000000>;
+};
