--- a/arch/arm64/boot/dts/google/gs201-cheetah-audio.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cheetah-audio.dtsi
@@ -169,7 +169,7 @@
 		cirrus,tuning-has-prefix;
 		cirrus,left-channel-amp;
 		cirrus,hw-noise-gate-select = <63>;
-		/* cirrus,hibernate-enable; */
+		cirrus,hibernate-enable;
 
 		cirrus,gpio-config2 {
 			cirrus,gpio-src-select = <0x5>;
@@ -213,7 +213,7 @@
 		cirrus,tuning-has-prefix;
 		cirrus,left-channel-amp;
 		cirrus,hw-noise-gate-select = <63>;
-		/* cirrus,hibernate-enable; */
+		cirrus,hibernate-enable;
 
 		cirrus,gpio-config2 {
 			cirrus,gpio-src-select = <0x5>;
