--- a/arch/arm64/boot/dts/google/gs201-gxp.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-gxp.dtsi
@@ -36,6 +36,7 @@
 			      GIC_SPI IRQ_MAILBOX_AUR32AP_ALIVE IRQ_TYPE_EDGE_RISING
 			      GIC_SPI IRQ_AUR_WDOG_CPU_IRQ_AUR IRQ_TYPE_EDGE_RISING>;
 		tpu-device = <&edgetpu>;
+		gsa-device = <&gsa>;
 		gxp-tpu-mbx-offset = <0x0 0xC0000>;
 		iommus = <&sysmmu_aur_idma>, <&sysmmu_aur_inst_data>;
 		samsung,iommu-group = <&iommu_group_aur>;
