arm64: dts: Pantah: Update ODPM schematic name
Bug: 191830845
Signed-off-by: Sam Ou <samou@google.com>
Change-Id: Ic8268bcc147360ffec05f75748ac774dfd29d385

--- a/arch/arm64/boot/dts/google/gs201-panther-common.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-panther-common.dtsi
@@ -32,3 +32,4 @@
 #include "gs201-panther-charging.dtsi"
 #include "gs201-panther-wcharger.dtsi"
 #include "gs201-panther-usb.dtsi"
+#include "gs201-pantah-pmic.dtsi"
