--- a/arch/arm64/boot/dts/google/gs201-cheetah-common.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cheetah-common.dtsi
@@ -35,3 +35,4 @@
 #include "gs201-cheetah-charging.dtsi"
 #include "gs201-cheetah-wcharger.dtsi"
 #include "gs201-cheetah-usb.dtsi"
+#include "gs201-pantah-pmic.dtsi"
