arm64/dts: gs201: Add wingboard support
Add EVT 1.1 wingboard supoort for C10/P10

Test: flash dtbo image and checks dmesg includes wingboard info
Bug: 219434296
Signed-off-by: Cyan_Hsieh <cyanhsieh@google.com>
Change-Id: Ie62038cf348410287ae17198a5e6dbe0c2a54238

--- a/arch/arm64/boot/dts/google/Makefile
+++ b/arch/arm64/boot/dts/google/Makefile
@@ -78,6 +78,7 @@ dtbo-$(CONFIG_BOARD_CLOUDRIPPER) += \
         gs201-cheetah-evt1-wingboard.dtbo \
         gs201-cheetah-evt1-nfc.dtbo \
         gs201-cheetah-evt1_1.dtbo \
+        gs201-cheetah-evt1_1-wingboard.dtbo \
         gs201-cheetah-dvt1.dtbo \
         gs201-cheetah-pvt1.dtbo \
         gs201-cheetah-mp.dtbo \
@@ -87,6 +88,7 @@ dtbo-$(CONFIG_BOARD_CLOUDRIPPER) += \
         gs201-panther-evt1.dtbo \
         gs201-panther-evt1-wingboard.dtbo \
         gs201-panther-evt1_1.dtbo \
+        gs201-panther-evt1_1-wingboard.dtbo \
         gs201-panther-dvt1.dtbo \
         gs201-panther-pvt1.dtbo \
         gs201-panther-mp.dtbo
@@ -107,6 +109,7 @@ gs201-cheetah-evt1.dtbo-base := gs201-a0.dtb
 gs201-cheetah-evt1-wingboard.dtbo-base := gs201-a0.dtb
 gs201-cheetah-evt1-nfc.dtbo-base := gs201-a0.dtb
 gs201-cheetah-evt1_1.dtbo-base := gs201-a0.dtb
+gs201-cheetah-evt1_1-wingboard.dtbo-base := gs201-a0.dtb
 gs201-cheetah-dvt1.dtbo-base := gs201-a0.dtb
 gs201-cheetah-pvt1.dtbo-base := gs201-a0.dtb
 gs201-cheetah-mp.dtbo-base := gs201-a0.dtb
@@ -116,6 +119,7 @@ gs201-panther-proto1_1-wingboard.dtbo-base := gs201-a0.dtb
 gs201-panther-evt1.dtbo-base := gs201-a0.dtb
 gs201-panther-evt1-wingboard.dtbo-base := gs201-a0.dtb
 gs201-panther-evt1_1.dtbo-base := gs201-a0.dtb
+gs201-panther-evt1_1-wingboard.dtbo-base := gs201-a0.dtb
 gs201-panther-dvt1.dtbo-base := gs201-a0.dtb
 gs201-panther-pvt1.dtbo-base := gs201-a0.dtb
 gs201-panther-mp.dtbo-base := gs201-a0.dtb
