arm64/dts: gs201: update BUCKC and BUCKD regulator
Regulators should be set to gpio control by default.

Bug: 214100837
Signed-off-by: Konstantin Vyshetsky <vkon@google.com>
Change-Id: I6482f4649785693f8d90e3cb13f9d6c94d029022

--- a/arch/arm64/boot/dts/google/gs201-pmic.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-pmic.dtsi
@@ -923,7 +923,7 @@
 				regulator-min-microvolt = <450000>;
 				regulator-max-microvolt = <1350000>;
 				regulator-always-on;
-				regulator-initial-mode = <SEC_OPMODE_ON>;
+				regulator-initial-mode = <SEC_OPMODE_SUSPEND>;
 				channel-mux-selection = <0xD>;
 				schematic-name = "SC";
 				subsys-name = "IO";
@@ -937,7 +937,7 @@
 				regulator-min-microvolt = <2400000>;
 				regulator-max-microvolt = <3300000>;
 				regulator-always-on;
-				regulator-initial-mode = <SEC_OPMODE_ON>;
+				regulator-initial-mode = <SEC_OPMODE_SUSPEND>;
 				channel-mux-selection = <0xB>;
 				schematic-name = "SD";
 				subsys-name = "IO";
