--- a/arch/arm64/boot/dts/google/gs201-cheetah-touch.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cheetah-touch.dtsi
@@ -39,6 +39,7 @@
 	synaptics,spi-mode = <0>;
 	synaptics,spi-byte-delay-us = <0>;
 	synaptics,spi-block-delay-us = <0>;
+	synaptics,pixels-per-mm = <20>;
 	synaptics,panel_map = <&sdc_s6e3hc3_c10>,
 			      <&sdc_s6e3hc4>,
 			      <&boe_nt37290>;
