--- a/arch/arm64/boot/dts/google/gs201-common.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-common.dtsi
@@ -33,7 +33,7 @@
 	key_power: key-power {
 		samsung,pins = "gpa10-0";  /* PMIC_PWRON_OD_L */
 		samsung,pin-function = <EXYNOS_PIN_FUNC_EINT>;
-		samsung,pin-pud = <EXYNOS_PIN_PULL_NONE>;
+		samsung,pin-pud = <EXYNOS_PIN_PULL_UP>;
 		samsung,pin-drv = <GS101_PIN_DRV_2_5_MA>;
 	};
 	key_voldown: key-voldown {
