--- a/arch/arm64/boot/dts/google/gs201-pinctrl.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-pinctrl.dtsi
@@ -259,14 +259,14 @@
 			samsung,pins = "gph0-1";
 			samsung,pin-function = <2>;
 			samsung,pin-pud = <3>;
-			samsung,pin-drv = <GS101_PIN_DRV_10_MA>;
+			samsung,pin-drv = <GS101_PIN_DRV_2_5_MA>;
 			samsung,pin-con-pdn = <3>;
 			samsung,pin-pud-pdn = <3>;
 		};
 		pcie0_perst: pcie0_perst {
 			samsung,pins = "gph0-0";
 			samsung,pin-function = <1>;
-			samsung,pin-drv = <GS101_PIN_DRV_10_MA>;
+			samsung,pin-drv = <GS101_PIN_DRV_2_5_MA>;
 			samsung,pin-con-pdn = <3>;
 		};
 	};
@@ -344,14 +344,14 @@
 			samsung,pins = "gph2-1";
 			samsung,pin-function = <2>;
 			samsung,pin-pud = <3>;
-			samsung,pin-drv = <GS101_PIN_DRV_10_MA>;
+			samsung,pin-drv = <GS101_PIN_DRV_2_5_MA>;
 			samsung,pin-con-pdn = <3>;
 			samsung,pin-pud-pdn = <3>;
 		};
 		pcie1_perst: pcie1_perst {
 			samsung,pins = "gph2-0";
 			samsung,pin-function = <1>;
-			samsung,pin-drv = <GS101_PIN_DRV_10_MA>;
+			samsung,pin-drv = <GS101_PIN_DRV_2_5_MA>;
 			samsung,pin-con-pdn = <3>;
 		};
 	};
