arm64/dts: gs201: fix usi13/15 pin pulls
fix use13/15 to do no pull/previous in sleep.

Bug: 204588633
Signed-off-by: Andrew Chant <achant@google.com>

Change-Id: I33ddfc6a5554a6ea282860d8a2090b44c5515e50

--- a/arch/arm64/boot/dts/google/gs201-cloudripper-battery.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-cloudripper-battery.dtsi
@@ -99,7 +99,9 @@
 
 &hsi2c13_bus {
 	samsung,pins = "gpp25-0", "gpp25-1";
-	samsung,pin-pud = <EXYNOS_PIN_PULL_UP>;
+	samsung,pin-pud = <EXYNOS_PIN_PULL_NONE>;
+	samsung,pin-con-pdn = <EXYNOS_PIN_PDN_PREV>;
+	samsung,pin-pud-pdn = <EXYNOS_PIN_PULL_NONE>;
 };
 
 &hsi2c_15 {
