--- a/arch/arm64/boot/dts/google/gs201-gxp.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-gxp.dtsi
@@ -30,10 +30,10 @@
 		reg-names = "aur",
 			    "mailbox0", "mailbox1", "mailbox2", "mailbox3",
 			    "ssmt_idma", "ssmt_inst_data";
-		interrupts = <GIC_SPI IRQ_MAILBOX_AUR02AP_ALIVE IRQ_TYPE_EDGE_RISING
-			      GIC_SPI IRQ_MAILBOX_AUR12AP_ALIVE IRQ_TYPE_EDGE_RISING
-			      GIC_SPI IRQ_MAILBOX_AUR22AP_ALIVE IRQ_TYPE_EDGE_RISING
-			      GIC_SPI IRQ_MAILBOX_AUR32AP_ALIVE IRQ_TYPE_EDGE_RISING
+		interrupts = <GIC_SPI IRQ_MAILBOX_AUR02AP_ALIVE IRQ_TYPE_LEVEL_HIGH
+			      GIC_SPI IRQ_MAILBOX_AUR12AP_ALIVE IRQ_TYPE_LEVEL_HIGH
+			      GIC_SPI IRQ_MAILBOX_AUR22AP_ALIVE IRQ_TYPE_LEVEL_HIGH
+			      GIC_SPI IRQ_MAILBOX_AUR32AP_ALIVE IRQ_TYPE_LEVEL_HIGH
 			      GIC_SPI IRQ_AUR_WDOG_CPU_IRQ_AUR IRQ_TYPE_EDGE_RISING>;
 		tpu-device = <&edgetpu>;
 		gsa-device = <&gsa>;
