arm64/dts: gs101: add arm,primecell-periphid for ETF/ETR.
In amba_device_try_add, the AMBA driver needs to read ids of ETF/ETR
when adding them. That needs to enable pclk, which fails with
EPROBE_DEFER at the first try. And the next try happens 5s later.

By adding ids for ETF/ETR in device tree, we can make them ready
much earlier, at about 2s after booting.

Bug: 214071088
Change-Id: I4752aaf1bdbcdb3a631dbbc03d0b6e9897b78d09
Signed-off-by: Yabin Cui <yabinc@google.com>

--- a/arch/arm64/boot/dts/google/gs101-debug.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-debug.dtsi
@@ -611,6 +611,7 @@
 
 	etf0: etf@25004000 {
 		compatible = "arm,coresight-tmc", "arm,primecell";
+		arm,primecell-periphid = <0x001bb961>;
 		reg = <0 0x25004000 0x1000>;
 
 		coresight-name = "coresight-etf0";
@@ -637,6 +638,7 @@
 
 	etf1: etf@25005000 {
 		compatible = "arm,coresight-tmc", "arm,primecell";
+		arm,primecell-periphid = <0x001bb961>;
 		reg = <0 0x25005000 0x1000>;
 
 		coresight-name = "coresight-etf1";
@@ -663,6 +665,7 @@
 
 	etr: etr@2500a000 {
 		compatible = "arm,coresight-tmc", "arm,primecell";
+		arm,primecell-periphid = <0x001bb961>;
 		reg = <0 0x2500a000 0x1000>;
 
 		coresight-name = "coresight-etr";
