--- a/arch/arm64/boot/dts/google/gs201-panther-touch.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-panther-touch.dtsi
@@ -58,6 +58,7 @@
 	focaltech,rx_ch_num = <34>;
 	focaltech,tx_ch_num = <16>;
 	focaltech,touch_offload_id = /bits/ 8 <'p' '1' '0' '0'>;
+	focaltech,mm2px= /bits/ 8 <8>;
 
 	pinctrl-1 = <&ts_spi_bus_sleep &ts_spi_cs_sleep &ts_irq_sleep>;
 
