--- a/arch/arm64/boot/dts/google/gs201-panther-battery.dtsi
+++ b/arch/arm64/boot/dts/google/gs201-panther-battery.dtsi
@@ -12,6 +12,12 @@
 
 &max77759_fg {
 	/delete-property/ maxim,force-batt-id;
+
+	maxim,filtercfg-temp = <100>;
+	maxim,filtercfg-temp-hysteresis = <30>;
+	maxim,filtercfg-default = /bits/ 16 <0xc613>;
+	maxim,filtercfg-adjust = /bits/ 16 <0xc617>;
+
 	maxim,fg-data {
 		#include "gs201-panther-battery-data.dtsi"
 	};
