arm64/dts: gs101: use scatter-gather mode in ETR.
Currently, ETR uses flat mode, which needs to allocate 1M contiguous
physical memory. The allocation may continuously fail, and cause
backtrace dumps.

To fix it, this patch switches ETR to scatter-gather mode, which
doesn't need contiguous physical pages.

Bug: 213522686
Change-Id: Ibe79ad20ff9c2fbeb67ee3d5aa110149e5364a1c
Signed-off-by: Yabin Cui <yabinc@google.com>

--- a/arch/arm64/boot/dts/google/gs101-debug.dtsi
+++ b/arch/arm64/boot/dts/google/gs101-debug.dtsi
@@ -669,6 +669,7 @@
 		reg = <0 0x2500a000 0x1000>;
 
 		coresight-name = "coresight-etr";
+		arm,scatter-gather;
 
 		clocks = <&clock ATCLK>;
 		clock-names = "apb_pclk";
